@@ -47,6 +47,7 @@ importFrom(raster,predict)
 importFrom(raster,raster)
 importFrom(raster,reclassify)
 importFrom(raster,res)
+importFrom(raster,resample)
 importFrom(raster,stack)
 importFrom(raster,writeRaster)
 importFrom(rpart,rpart)
