@@ -450,11 +450,12 @@ setMethod('get_PA', "GBM.SDM",
             return(PA)})
 
 setMethod('get_model', "GBM.SDM",
-          function(obj, trees = 2500, final.leave = 1, algocv = 3, thresh.shrink = 1e-03, ...) {
+          function(obj, trees = 2500, final.leave = 1, algocv = 3, 
+                   thresh.shrink = 1e-03, n.cores = NULL, ...) {
             data = obj@data[-c(which(names(obj@data) == 'X'),which(names(obj@data) == 'Y'))]
             model = gbm(Presence ~ ., data = data,
                         distribution = 'bernoulli', n.minobsinnode = final.leave,
-                        shrinkage = thresh.shrink, bag.fraction = 0.5,
+                        shrinkage = thresh.shrink, bag.fraction = 0.5, n.cores = n.cores,
                         train.fraction = 1, cv.folds = algocv, n.trees = trees)
             return(model)})
 
