@@ -1,3 +1,6 @@
+if (!requireNamespace("shinyFiles", quietly = TRUE)) {
+  stop("shinyFiles package is needed for the Global User Interface. Please install it.")
+}
 library(shinydashboard)
 library(shinyFiles)
 library(raster)
